--- a/index.html
+++ b/index.html
@@ -22,29 +22,26 @@
         </div>
 
         <div class="pipiduro">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/P_5BUNQablM?si=HMlUdQd5zRgJXM2U"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/Vi-mTjshD-s?si=F0fIMxkFz9PenghC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></iframe>
         </div>
     </section>
 
     <section class="mamada"><h2>Outros Videos:</h2></section>
     <div>
-        <a href="https://www.youtube.com/watch?v=3ufXW-1tH0A">
-        <img src="https://img.youtube.com/vi/3ufXW-1tH0A/maxresdefault.jpg">
+        <a href="https://www.youtube.com/watch?v=XBgbBrxj2to">
+        <img src="https://img.youtube.com/vi/XBgbBrxj2to/maxresdefault.jpg">
 
     </a>
-    <a href="https://www.youtube.com/watch?v=BI3TLpoWBVo">
-        <img src="https://img.youtube.com/vi/BI3TLpoWBVo/maxresdefault.jpg">
+    <a href="https://www.youtube.com/watch?v=YW68edzbczM">
+        <img src="https://img.youtube.com/vi/YW68edzbczM/maxresdefault.jpg">
 
 
     </a>    <a href="https://www.youtube.com/watch?v=jcPIsSbqM-Y">
         <img src="https://img.youtube.com/vi/jcPIsSbqM-Y/maxresdefault.jpg">
 
 
-    </a>    <a href="https://www.youtube.com/watch?v=hEixV8KCBdM">
-        <img src="https://img.youtube.com/vi/hEixV8KCBdM/maxresdefault.jpg">
+    </a>    <a href="https://www.youtube.com/watch?v=WXgo-DMxId8">
+        <img src="https://img.youtube.com/vi/WXgo-DMxId8/maxresdefault.jpg">
 
 
 
